# RedStoneHub

./: .cfignore  .gitignore  BingSiteAuth.xml  README.md  _routes.json  buttom.js  check.js  check.py  download.html  footer.html  footer.js  getUpdate.js  getVersion.js  home  home.html  main.html  new.html  pagestyle.css  papers.html  pyproject.toml  status.html  style.css  template.html  wrangler.toml
carnival/: achievements.html  deepseek1.1.md  deepseek1.2.md  deepseek1.3.md  deepseek1.4.md  have_to_say.html  home.html  talk.html  故事主干稿.md  故事稿.md  赞助列表.md  赞助稿.md
carnival/paper/: deepseek1.0.md  故事稿.md
carnival/server/: VisitedListManager.py  main.py  pyproject.toml
css/: achievements_style.css  bilibili-style.css  carnival.css  pagestyle.css  style.css
file/: C2后半.docx
file/codingClub/: 机房3-03_高二（1）肖巍37.docx  机房3-04_20240204王韵涵.docx  机房3-41_0537 王一晗.docx  机房3-45_QB Carnival 2025 by RyanXee.docx
file/codingClub/储瑞轩/: 机房3-03_IDLE (Python 3.7 64-bit).lnk  机房3-03_储瑞轩.docx
js/: bilibili.js  buttom.js  check.js  comments.js  getUpdate.js  getVersion.js  touchZoom.js  touchactive.js  vote.js
paper/: 1-21-4.html  3b-picture.html  chgz.html  comments.html  how-to-make-a-website.html  item.html  newpack.html  no-flesh-within-chest.html  peopel.html  rlcraft.html  schoolmap.html  template.html  winter-painting2025.html
